// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultChildren should render the toggle icon with "on" equals to false 1`] = `
Array [
  <input
    aria-label="Type and search"
    onChange={[Function]}
    placeholder="Type and search"
    style={
      Object {
        "border": "none",
        "padding": "1rem 1.5rem",
        "width": "100%",
      }
    }
    type="search"
  />,
  <ul
    style={
      Object {
        "borderTop": "1px solid #ccc",
        "listStyleType": "none",
        "paddingLeft": 0,
      }
    }
  >
    <li
      key="key"
      role="button"
      style={
        Object {
          "background": "none",
          "borderBottom": "1px solid #ccc",
          "color": "#333",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 2.5rem",
        }
      }
    >
      <div
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <ToggleIcon
          on={false}
        >
          <div
            aria-label="Toggle"
            role="img"
            style={
              Object {
                "height": "2rem",
                "lineHeight": "2rem",
                "textAlign": "center",
                "width": "2rem",
              }
            }
          >
            +
          </div>
        </ToggleIcon>
      </div>
      <span
        onClick={[Function]}
      >
        foo
      </span>
    </li>
  </ul>,
]
`;

exports[`defaultChildren should render the toggle icon with "on" equals to true 1`] = `
Array [
  <input
    aria-label="Type and search"
    onChange={[Function]}
    placeholder="Type and search"
    style={
      Object {
        "border": "none",
        "padding": "1rem 1.5rem",
        "width": "100%",
      }
    }
    type="search"
  />,
  <ul
    style={
      Object {
        "borderTop": "1px solid #ccc",
        "listStyleType": "none",
        "paddingLeft": 0,
      }
    }
  >
    <li
      key="foo"
      role="button"
      style={
        Object {
          "background": "none",
          "borderBottom": "1px solid #ccc",
          "color": "#333",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 2.5rem",
        }
      }
    >
      <div
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <ToggleIcon
          on={true}
        >
          <div
            aria-label="Toggle"
            role="img"
            style={
              Object {
                "height": "2rem",
                "lineHeight": "2rem",
                "textAlign": "center",
                "width": "2rem",
              }
            }
          >
            -
          </div>
        </ToggleIcon>
      </div>
      <span
        onClick={[Function]}
      >
        foo
      </span>
    </li>
    <li
      key="bar"
      role="button"
      style={
        Object {
          "background": "none",
          "borderBottom": "1px solid #ccc",
          "color": "#333",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 6.25rem",
        }
      }
    >
      <span
        onClick={[Function]}
      >
        bar
      </span>
    </li>
    <li
      key="zoo"
      role="button"
      style={
        Object {
          "background": "none",
          "borderBottom": "1px solid #ccc",
          "color": "#333",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 6.25rem",
        }
      }
    >
      <span
        onClick={[Function]}
      >
        zoo
      </span>
    </li>
  </ul>,
]
`;

exports[`defaultChildren should render without the toggle icon 1`] = `
Array [
  <input
    aria-label="Type and search"
    onChange={[Function]}
    placeholder="Type and search"
    style={
      Object {
        "border": "none",
        "padding": "1rem 1.5rem",
        "width": "100%",
      }
    }
    type="search"
  />,
  <ul
    style={
      Object {
        "borderTop": "1px solid #ccc",
        "listStyleType": "none",
        "paddingLeft": 0,
      }
    }
  >
    <li
      key="key"
      role="button"
      style={
        Object {
          "background": "none",
          "borderBottom": "1px solid #ccc",
          "color": "#333",
          "cursor": "pointer",
          "padding": " .75rem  1rem  .75rem 2.75rem",
        }
      }
    >
      <span
        onClick={[Function]}
      >
        foo
      </span>
    </li>
  </ul>,
]
`;
